Added test case for read-write table sets in LocalTransaction